# olive-emu

./: .gitignore  CMakeLists.txt  README.md
include/: boolean.h  nes.h  window.h
include/core/: bus.h  cart.h  cpu.h
source/: main.c  nes.c  window.cpp
source/core/: bus.c  cart.c  cpu.c
